templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gobpms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: gobpms.127.0.0.1.nip.io
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gobpms-engine
                port:
                  name: api
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: gobpms-showcase-fe
                port:
                  name: http
